moving tabu.sty and updating relevant code.

--- a/preambles/standard_knitr_beamer_preamble.tex
+++ b/preambles/standard_knitr_beamer_preamble.tex
@@ -21,7 +21,9 @@
 %	For tables
 %[dvipsnames] [table]
 \usepackage{xcolor}
-\usepackage{tabu}	% Even fancier than tabulary
+
+%% calling tabu.sty, assuming a particular directory structure
+\usepackage{../preambles/tabu}	% Even fancier than tabulary
 \usepackage{multirow}
 
 %	Just for the degree symbol
