--- a/syllabus/Methods2_ReichSyllabus.tex
+++ b/syllabus/Methods2_ReichSyllabus.tex
@@ -32,7 +32,9 @@
 \noindent nick [at] umass.edu \\
 \noindent on twitter: \href{https://twitter.com/reichlab}{@reichlab}\\
 \noindent Office Hours: TBD \\
-\noindent Teaching assistant: TBD 
+\noindent Teaching assistant: TBD \\
+\noindent \href{https://github.com/nickreich/methods2}{Course notes on GitHub}
+
 %\noindent Moodle site: \href{https://moodle.umass.edu/course/view.php?id=2905}{TBD}
 
 %\bigskip
@@ -44,7 +46,7 @@
 
 \noindent {\em Required Textbook}
 
-Kutner, M., Nachtsheim, C., Neter, J., and Li, W. (2004). \emph{Applied Linear Statistical Models}, \emph{4th Edition}. %ÒMcGraw-Hill/Irwin.
+Kutner, M., Nachtsheim, C., Neter, J., and Li, W. (2004). \emph{Applied Linear Statistical Models}, \emph{4th Edition}. %?McGraw-Hill/Irwin.
   
 \noindent {\em Recommended Textbooks}
 
@@ -191,7 +193,7 @@ Since the integrity of the academic enterprise of any institution of higher educ
 Academic dishonesty is prohibited in all programs of the University. Academic dishonesty includes but is not limited to: cheating, fabrication, plagiarism, and facilitating dishonesty. Appropriate sanctions may be imposed on any student who has committed an act of academic dishonesty. Instructors should take reasonable steps to address academic misconduct. Any person who has reason to believe that a student has committed academic dishonesty should bring such information to the attention of the appropriate course instructor as soon as possible. Instances of academic dishonesty not related to a specific course should be brought to the attention of the appropriate department Head or Chair. The procedures outlined below are intended to provide an efficient and orderly process by which action may be taken if it appears that academic dishonesty has occurred and by which students may appeal such actions.
 
 Since students are expected to be familiar with this policy and the commonly accepted standards of academic integrity, ignorance of such standards is not normally sufficient evidence of lack of intent.
-For more information about what constitutes academic dishonesty, please see the \href{http://umass.edu/dean_students/codeofconduct/acadhonesty/}{Dean of Students’ website}.
+For more information about what constitutes academic dishonesty, please see the \href{http://umass.edu/dean_students/codeofconduct/acadhonesty/}{Dean of Students? website}.
 
 }
 
