--- a/problemSets/ps1.Rnw
+++ b/problemSets/ps1.Rnw
@@ -17,7 +17,9 @@
 
 \item Read KNN chapter 1-3, OpenIntro Chapter 7
 
-\item Problems from KNN Chapter 1: 5, 6, 7, 10, 11, 27, 28, 32, 36, 42
+\item Derive the SLR estimators $\hat \beta_0$ and $\hat \beta_1$. 
+
+\item Problems from KNN Chapter 1: 5, 6, 7, 10, 11, 27, 28, 36, 42
 
 \item Problems from KNN Chapter 2: 1, 10, 13, 28, 30, 50, 68
 
