--- a/syllabus/Methods2_ReichSyllabus.tex
+++ b/syllabus/Methods2_ReichSyllabus.tex
@@ -131,21 +131,19 @@ Biostatistics Methods 1, or equivalent. Otherwise, permission of instructor requ
 \bigskip
 \noindent {\sc Types of Assignments and Activities, with Grade Contributions}
 
-\noindent Problem sets and readings (25\%): Throughout the semester, I will assign several chapters of reading in a textbook and some accompanying problems (usually from the textbook). There will be between 3 and 5 problem sets throughout the semester. You will be required to hand in reproducible solutions, i.e. a knitr file that reproduces your answers. \\
+\noindent Problem sets and readings (25\%): Throughout the semester, I will assign several chapters of reading in a textbook and some accompanying problems (usually from the textbook). There will be between 3 and 6 problem sets throughout the semester. You will be required to hand in a digital file with reproducible solutions, i.e. a knitr file that reproduces your answers. \\
 
-\noindent Quizzes (25\%): There will be occasional quizzes, some announced, some unannounced. They will be short (about 10 minutes), in-class quizzes that will test your understanding of material covered in the course up to that time. The quizzes will not be designed to be difficult, as they are largely designed to evaluate participation, engagement with the material, and attendance. Quizzes will take many forms: short answer or multiple choice questions, an in-class survey of results of a take-home lab assignment, etc... I will drop your lowest quiz score when calculating your final grade.  \\
+\noindent Quizzes (25\%): There will be occasional quizzes, some announced, some unannounced. They will be short (less than 10 minutes), in-class quizzes that will test your understanding of material covered in the course up to that time. The quizzes will not be designed to be difficult, as they are largely designed to evaluate participation, engagement with the material, and attendance. Quizzes will take many forms: short answer or multiple choice questions, an in-class survey of results of a take-home lab assignment, etc... I will drop your lowest quiz score when calculating your final grade.  \\
 
-
-\noindent Participation  	($10\%$) :
-You are expected to attend class every day, to participate actively in group work and discussions, and to provide helpful and insightful feedback to fellow students.\\
+\noindent Participation, labs, and homework ($15\%$) :
+You are expected to attend class every day, to participate actively in group work and discussions, and to provide helpful and insightful feedback to fellow students. We will be doing a lot of hands-on in-class work. Often, there will be some additional work required to finish the labs after class ends, or a short assignment will be given for the next class. These assignments will not be graded in and of themselves, but your completion of these assignments will be evaluated by quizzes and cold-calling on students during class discussions in the following class period. Your participation grade will depend on your ability to answer questions about these assignments. \\
 %from Aaron Swoboda: I consider course citizenship to be a vital part of your grade. A few of the characteristics of good class citizens are: attending all course meetings, using office hours, asking questions, offering to answer questions, actively listening when others are talking, and posting to online discussion forums, among others. Citizenship is more a function of quality than quantity. Note that the "default" citizenship score is 5 out of 10, which allows students who actively and productively contribute to class to substantially increase their grade. Please note that good citizenship is different from "talking a lot," and it is quite possible to earn a low citizenship score because you fail to let others contribute.
 
-\noindent Labs: We will be doing some hands-on in-class work. Often, there will be some additional work required to finish the labs after class ends. Labs will not be graded in and of themselves, but your understanding of the material covered by the labs will be evaluated often by short presentations and quizzes. \\
 
-\noindent Short presentations ($15\%$): In almost all class periods, there will be several short assignments given by individual students during class. The presentations will each be about 5 minutes long and typically will present results from in-class labs or other brief assignments given the previous class period. Presenters will be chosen randomly from the class roster. These presentations will count towards your participation grade. \\
+\noindent Independent Final Project (35\%): A large component of the course will be an independent project which will be presented to and evaluated (in part) by your classmates. A separate handout will provide details. \\
 
-\noindent Independent Final Project (25\%): A large component of the course will be an independent project which will be presented to and evaluated (in part) by your classmates. A separate handout will provide details. 
 
+\noindent Extra Credit: If you send me an email with ``I read the syllabus'' as the subject line by the beginning of the second class, you will receive two points of extra credit on your final grade.
 
 \bigskip
 \noindent {\sc Course Policies}
@@ -158,7 +156,7 @@ Make-up quizzes: Make-ups will not be allowed. I will drop the lowest quiz score
 
 Attendance is required. Absences (excused or not) will impact your participation grade.
 
-All mobile devices (smart phones, dumb phones, tablets, etc...) must be turned off at the start of class and may not be used during class time.
+All mobile devices that can/will be distracting to you or others during class must be turned off at the start of class and may not be used during class time.
   
   
   \clearpage
