updating error in syllabus

--- a/syllabus/Methods2_ReichSyllabus.tex
+++ b/syllabus/Methods2_ReichSyllabus.tex
@@ -46,7 +46,7 @@
 
 \noindent {\em Required Textbook}
 
-Kutner, M., Nachtsheim, C., Neter, J., and Li, W. (2004). \emph{Applied Linear Statistical Models}, \emph{4th Edition}. %?McGraw-Hill/Irwin.
+Kutner, M., Nachtsheim, C., Neter, J., and Li, W. (2004). \emph{Applied Linear Regression Models}, \emph{4th Edition}. %?McGraw-Hill/Irwin.
   
 \noindent {\em Recommended Textbooks}
 
