--- a/class3_SLRBasics/slides_SLRBasics.Rnw
+++ b/class3_SLRBasics/slides_SLRBasics.Rnw
@@ -86,6 +86,22 @@ qplot(x, y, data=dat, facets=.~set, alpha=.5) + geom_smooth(method="lm", se=FALS
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}{Goals for this class}
+
+\begin{block}{You should be able to...}
+\bi
+        \myitem interpret regression coefficients.
+        \myitem derive estimators for SLR coefficients.
+        \myitem implement a SLR from scratch (i.e. not using {\tt lm()}).
+        \myitem explain why some points have more influence than others on the fitted line.
+\ei
+\end{block}
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{frame}{Regression modeling}
 
 \bi
